GNOME Bugzilla – Bug 688689
font-style="normal" ignored as an attribute of a tspan
Last modified: 2015-08-04 15:07:21 UTC
Created attachment 229424 [details] an svg file with tspan/roman inside a text/italica When a <text> tag has attribute font-style="italic", it should be possible to include segments of roman characters using <tspan font-style="normal">. From an inspection of the source code, it seems that librsvg ignores the value "normal" in the attribute font-style.
Created attachment 229425 [details] how the previous .svg file should look like
Created attachment 229426 [details] [review] a patch to rsvg-css.c for including the case text-style="normal"