Handle font-style="normal"

Accept font-style="normal" ignored as an attribute of a tspan,
https://bugzilla.gnome.org/show_bug.cgi?id=688689